<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OVH_MIS571</string>
    <string name="hello_world">HELLO CLASS!</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to OVH</string>
    <string name="patient_view">PATIENT VIEW</string>
	<string name="doctor_view">DOCTOR VIEW</string>
    	
    <string name="patient_prompt">Choose a View Option</string>
	<string-array name="patient_array">
		<item>My Info</item>
		<item>My Appointments</item>
		<item>Query 3</item>
		<item>Query 4</item>
		<item>Query 5</item>
		<item>Query 6</item>
		<item>Query 7</item>
    </string-array>
		<string name="showresult_patient">VIEW</string>
		<string name="goback_patient">HOME</string>
		
    <string name="doctor_prompt">Choose a view Option</string>
	<string-array name="doctor_array">
		<item>My Info</item>
		<item>My Appointments</item>
		<item>View Patient Details</item>
		<item>View Patient Diagnosis</item>
		<item>View Patient Tests</item>
        <item>View Patient Treatment</item>
    </string-array>
    <string name="showresult_doctor">VIEW</string>
	<string name="goback_doctor">HOME</string>
	<string name="gopatient_btn">PATIENT</string>
	<string name="godoctor_btn">DOCTOR</string>
	<string name="gopfs_btn">PFS</string>
	<string name="goadmin_btn">ADMIN</string>
	<string name="pfs_view">PFS VIEW</string>
	<string name="showresult_pfs">SHOW</string>
	<string name="goback_pfs">HOME</string>
	<string name="pfs_prompt">Choose a View Option</string>
	<string-array name="pfs_array">
		<item>Query 1</item>
		<item>Query 2</item>
		<item>Query 3</item>
		<item>Query 4</item>
		<item>Query 5</item>
		<item>Query 6</item>
		<item>Query 7</item>
    </string-array>
		<string name="patient_register">New Patient Registration</string>
		<string name="patient_lastname">LAST NAME</string>
		<string name="appoint">APPOINTMENT</string>
		<string name="appnt_patient">PATIENT_ID</string>
		<string name="patient_id">PATIENT ID</string>
		<string name="patientid">PATIENT ID</string>
		<string name="appointid">PATIENT ID</string>
		<string name="doctor">DOCTOR</string>
		<string name="date">Appointment Date</string>
		<string name="register">PATIENT REGISTRATION</string>
		<string name="firstname">F_NAME</string>
		<string name="lastname">L_NAME</string>
		<string name="radio1">MALE</string>
		<string name="radio2">FEMALE</string>
		<string name="dob">DOB</string>
		<string name="address">ADDRESS</string>
		<string name="CITY">CITY</string>
		<string name="ADDRESS">ADDRESS</string>
		<string name="zip">ZIP CODE</string>
		<string name="state">STATE</string>
		<string name="back">BACK</string>
		<string name="sex">SEX</string>
		<string-array name="sex_array">
		<item>M</item>
		<item>F</item>
    </string-array>
		<string name="phone">PHONE</string>
	<string name="appoint_prompt">Doctor Options</string>
	<string-array name="appoint_array">
		<item>Doctor1</item>
		<item>Doctor2</item>
		<item>Doctor3</item>
		<item>Doctor4</item>
	</string-array>
		<string name="payment">"PAYMENT"</string>
		<string name="billid">BILL ID</string>
		<string name="payamt">Amount</string>
		<string name="paymethod">METHOD</string>
		<string name="credit">"Credit"</string>
		<string name="cash">Cash</string>
		<string name="check">Check</string>
		<string name="debit">Debit</string>
		<string name="Credit">Credit</string>
		<string name="paydate">PAYMENT DATE</string>
		<string name="registerhere">REGISTER</string>
</resources>
