<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/payment_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/payment"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/billid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/billid"
            android:textSize="15sp"
            android:layout_marginLeft="10dp"
            android:textStyle="normal" />

        <EditText
            android:id="@+id/billid_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:inputType="number" >

            <requestFocus />
        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/payamt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/payamt"
            android:layout_marginLeft="10dp" />

        <EditText
            android:id="@+id/payamt_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:layout_marginLeft="10dp"
            android:inputType="numberDecimal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/paymethod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/paymethod" />
        
        <RadioGroup
        android:id="@+id/radiogroup_method"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp" >
            
        <RadioButton
            android:id="@+id/radio_credit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Credit" />

        <RadioButton
            android:id="@+id/radio_debit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/debit" />

        <RadioButton
            android:id="@+id/radio_cash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cash" />

        <RadioButton
            android:id="@+id/radio_Check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/check" />

    </RadioGroup>
        

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/paymentdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paydate" />

        <EditText
            android:id="@+id/paydate_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="date" />

    </LinearLayout>
    
       <LinearLayout
        	android:id="@+id/layout_footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp" >
        
    <Button
        android:id="@+id/appntmakebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:textStyle="bold"
        android:text="NEW APPNT"/>

    
    <Button
        android:id="@+id/billsubmitbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:text="PAY"/>
    
    <Button
        android:id="@+id/goBack_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:textStyle="bold"
        android:text="@string/goback_patient" />
    
    
</LinearLayout>

</LinearLayout>
