<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper" >

 <TextView
     android:id="@+id/pfsview"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center_horizontal"
     android:layout_marginTop="15dp"
     android:text="@string/pfs_view"
     android:textSize="22sp"
     android:textStyle="bold" />

    <Spinner
        android:id="@+id/pfslist_spinner"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:entries="@array/pfs_array"
        android:prompt="@string/pfs_prompt" />

    <Button
        android:id="@+id/showresult_pfs"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/showresult_pfs" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/goBack_pfs"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/goback_pfs" />
    

</LinearLayout>
