<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/wallpaper"
    tools:context=".MainActivity"
    tools:ignore="ScrollViewSize" >

         <ScrollView
          android:id="@+id/scrollView1"
          android:layout_width="match_parent"
          android:layout_height="match_parent" >

             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="vertical" >

                 <TextView
                     android:id="@+id/welcome"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:text="@string/welcome"
                     android:textSize="25sp"
                     android:textStyle="italic" />

                 <Button
                     android:id="@+id/gopatient_btn"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="50dp"
                     android:text="@string/gopatient_btn"
                     android:textStyle="bold" />

                 <Button
                     android:id="@+id/godoctor_btn"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="50dp"
                     android:text="@string/godoctor_btn"
                     android:textStyle="bold" />
                 
                 <Button
                     android:id="@+id/gopfs_btn"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="50dp"
                     android:text="@string/gopfs_btn"
                     android:textStyle="bold" />

                 <Button
                     android:id="@+id/goadmin_btn"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
                     android:layout_marginTop="50dp"
                     android:text="@string/goadmin_btn"
                     android:textStyle="bold" />

             </LinearLayout>

         </ScrollView>

       </LinearLayout>
