<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper">

    <TextView
        android:id="@+id/patientview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:text="@string/patient_view"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/patientlist_spinner"
        android:layout_width="270dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:entries="@array/patient_array"
        android:prompt="@string/patient_prompt" />

    <Button
        android:id="@+id/showresult_patient"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_gravity="right"
        android:layout_marginRight="26dp"
        android:layout_marginTop="10dp"
        android:text="@string/showresult_patient" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="260dp"
        android:layout_height="260dp"
        android:layout_gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        	android:id="@+id/layout_footer"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        
    <Button
        android:id="@+id/appntmakebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:text="NEW APPNT"/>

    <Button
        android:id="@+id/goBack_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:text="@string/registerhere"
        android:textStyle="bold" />
    
    <Button
        android:id="@+id/billpaybtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:textStyle="bold"
        android:text="PAY BILL"/>
</LinearLayout>
</LinearLayout>
