<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/wallpaper"  >

    <LinearLayout
        android:id="@+id/layout_appnt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/appoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/appoint"
            android:textSize="28sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_appoint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/headerview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/appointid"
            android:textSize="18sp"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/appoint_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:ems="10"
            android:textStyle="italic" >

            <requestFocus />
        </EditText>

    </LinearLayout>
    
    
    <LinearLayout
        android:id="@+id/layout_appointemp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp" >

        <TextView
            android:id="@+id/doctorview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/doctor"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Spinner
            android:id="@+id/appoint_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:prompt="@array/appoint_array" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_datepicker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical" >

    </LinearLayout>

    <TextView
        android:id="@+id/appointdateView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/date"
        android:textStyle="bold"
        android:textSize="20sp">
    </TextView>

    <DatePicker
        android:id="@+id/appointdatePicker"
        android:layout_width="wrap_content"
        android:layout_height="161dp" />

    <LinearLayout
        android:id="@+id/layout_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >
        
    <Button
        android:id="@+id/appntbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="SUBMIT" />

    <Button
        android:id="@+id/patienthomebtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:text="HOME" />	</LinearLayout>
    
</LinearLayout>